# acquiring

./: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
src/: application.py
src/core/: containers.py
src/core/config/: base.py  settings.py
src/core/fastapi/: routes.py
src/db/: base_repository.py  base_uow.py  connection.py  transaction.py
src/db/migrations/: env.py  logging.py
src/db/models/: __init__.py  alembic_model.py  base.py
src/dependency/: container.py  uow_container.py  use_case_container.py
