[tool.poetry]
name = "acquiring"
version = "0.1.0"
description = ""
authors = ["SNovak <novak.serzj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"
dependency-injector = "^4.42.0"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
fastapi = "^0.115.3"
black = "^24.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
